--- a/test/styles/styles.css
+++ b/test/styles/styles.css
@@ -1,5 +1,7 @@
 body, html {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 /* The hero image */
@@ -30,8 +32,8 @@ body, html {
 
 
 .button {
-  background: -webkit-linear-gradient(top , #aadddd 0%,  #d3d4d4 100%);
-  border: none;
+  background: -webkit-linear-gradient(top , #B7B8B9 0%,  #E5E6E7 100%);
+  border: 1px solid #fff;
   color:#222;
   padding: 15px 32px;
   text-align: center;
@@ -57,6 +59,9 @@ body, html {
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 500px) {
+  .hero-image {
+    background-image: url("../assets/hero_img_mobile_01.jpg");
+  }
   .column {
     width: 100%;
   }
