--- a/test/styles/styles.css
+++ b/test/styles/styles.css
@@ -37,7 +37,8 @@ body, html {
 
 .button {
   background: -webkit-linear-gradient(top , #B7B8B9 0%,  #E5E6E7 100%);
-  border: 1px solid #fff;
+  border: 0 none;
+  box-shadow: 0px 0px 0px 2px #fff inset;
   color:#222;
   padding: 15px 32px;
   text-align: center;
