--- a/test/styles/styles.css
+++ b/test/styles/styles.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   padding: 0;
   margin: 0;
@@ -14,7 +15,6 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-size: contain; */
   position: relative;
 }
 
@@ -24,7 +24,7 @@ body, html {
 
 /* Place text in the middle of the image */
 .hero-text {
-  font-family: 'Cairo',Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Cairo', Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   text-align: center;
   position: absolute;
@@ -34,18 +34,17 @@ body, html {
   color: white;
 }
 
-
 .button {
-  background: -webkit-linear-gradient(top , #B7B8B9 0%,  #E5E6E7 100%);
+  background: -webkit-linear-gradient(top, #B7B8B9 0%, #E5E6E7 100%);
   border: 0 none;
   box-shadow: 0px 0px 0px 2px #fff inset;
-  color:#222;
+  color: #222;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  max-width:200px;
+  max-width: 200px;
 }
 
 /* Two image containers (use 25% for four, and 50% for two, etc) */
@@ -63,7 +62,6 @@ body, html {
   margin-left: 2.5%;
 }
 
-
 /* Clear floats after image containers */
 .row::after {
   content: "";
@@ -78,24 +76,26 @@ body, html {
     height: 85%;
     background-position: left top;
   }
+
   .hero-text {
     top: 65%;
     font-size: 18px;
-    width:80%;
+    width: 80%;
   }
 
   .hero-text p {
     margin-bottom: 30px;
   }
+
   .column {
     width: 80%;
     margin: 10%;
   }
-  
+
   .column:first-child {
     margin-right: 10%;
   }
-  
+
   .column:last-child {
     margin-left: 10%;
   }
@@ -103,49 +103,5 @@ body, html {
   .game-title-container {
     padding-bottom: 10%;
   }
-
+  
 }
-
-
-
-
-
-
-/* Code that needs to be refractored */
-/* body {
-  background-image: url("../assets/Hero_img_mobile_01.jpg");
-  background-color: #cccccc;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  font-family: 'Cairo',Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
-  height: 100%;
-
-} */
-
-
-
-/* p {
-    font-size:1.3rem;
-    line-height: 1.9rem;
-} */
-
-/* .center {
-  color: white;
-  margin: auto;
-  padding: 10px;
-  text-align: center;
-}
-
-.bottom {
-  position: fixed;
-  bottom: 10%;
-} */
-/* 
-@media only screen and (min-width: 600px) {
-  body {
-    background-image: url("../assets/hero_img_01.jpg");
-    background-size: cover;
-  }
-} */
